- first bugfixes